# SciATools

./: pyproject.toml
.op/plugins/: gh.json
src/: platereadertools.py
