[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SciATools_aztaylor"
version = "0.0.1"
authors = [
  { name="Aleczander Taylor", email="alectaylor76@gmail.com" },
]
description = "A package which provides useful tools for working in a wet lab and to analyze data from various instruments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aztaylor/SciATools"
